Fix header wrap

--- a/src/css/_style.scss
+++ b/src/css/_style.scss
@@ -123,11 +123,11 @@ a {
     @include fs-bodyCopy(3);
     padding: ($gs-baseline * 4) 0 ($gs-baseline * 3);
     margin: 0 auto;
-    max-width: gs-span(7);
+    max-width: gs-span(7) - 40px;
     color: map-get($pasteup-palette, neutral-2);
 
     @media (min-width: gs-span(8)) {
-        padding-right: (gs-span(1) + $gs-gutter);
+        padding-right: (gs-span(1) + $gs-gutter + 40px);
     }
 
     h2 {
